general tabbox support for screenedges

REVIEW: 109362
BUG: 316288
FIXED-IN: 4.11